2004-04-26  Christian Jones  <chjones@aleph0.com>

	* docs/grub.texi (Making a GRUB bootable CD-ROM): minor edits,
	including a few compatibility notes and a change to
	-boot-load-size 4 for the mkisofs command.

2004-04-22  Jeroen Dekkers  <jeroen@dekkers.cx>

	* Makefile.am (AUTOMAKE_OPTIONS): Add "gnu".
	* configure.ac: Update to work with automake 1.8, quote all
	AC_DEFUN's correctly and provide descriptions for AC_DEFINE's.
	* acinclude.m4: Likewise.
	* acconfig.h: Removed.
	
	* stage1/Makefile.am (.exec): Use suffix rules instead of pattern
	rules.
	* stage2/Makefile.am (.exec): Likewise.

2004-04-18  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (Making a GRUB bootable CD-ROM): New section.

	* stage2/disk_io.c (set_device): Use CH instead of *DEVICE to
	test the first character of DEVICE, because DEVICE is
	incremented.
	Reported by Bernhard Treutwein.

2004-04-15  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/fsys_tftp.c (buf_fill): Cast 1 to unsigned short
	explicitly so that the constant doesn't extend unsigned short
	to int automatically.
	Reported by Eduard Guzovsky <eguzovsk@enterasys.com>.

	* docs/grub.texi (Invoking grub-md5-crypt): Fixed the chapter
	name.
	Reported by Martin Pool <mbp@sourcefrog.net>.

2004-04-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.ac (STAGE2_CFLAGS): Check if -fno-stack-protector is
	supported by GCC. If yes, added the option. This is necessary
	for OpenBSD, because the stack protector defines additional
	symbols. Reported by uc.sheda <uc.sheda@laposte.net>.

2004-03-28  Pavel Roskin  <proski@gnu.org>

	* stage2/boot.c: Imply --no-mem-option for Linux kernels with
	protocol version 2.03 and above (Linux 2.4.18 and newer).

2004-03-27  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/char_io.c [!GRUB_UTIL] (memcpy): New function. It is
	defined as an alias of grub_memmove. This is copied from GRUB 2.

	* stage2/disk_io.c (print_completions): Simplified conditionals